chore: remove legacy test, feat chore: test package to app test: update nio tests, add security - aop - mvc - context tests refactor: supports asspectj with asspectj-weaver feat: supports `@Primary`